--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
                     </div>
                     <div class="btn-2">
-                              <button class="buttons" id="no1" onclick="getTheElements(7)">%</button>
+                              <button class="buttons" id="no1" onclick="percentage()">%</button>
                               <button class="buttons" onclick="squaring()" id="no2">x<sup>2</sup></button>
                               <button class="buttons" onclick="squareRoot()"> 2<sub>&radic;x</sub> </button>
-                              <button class="buttons" onclick="backSpace()">⌫</button>
+                              <button class="buttons" id="back" onclick="backSpace()">⌫</button>
 
                     </div>
                     <div class="btn-3">
